prevent canvas overflowing viewport

--- a/style.css
+++ b/style.css
@@ -20,15 +20,23 @@ button {
   gap: 8px;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  align-items: center;
+}
+
 .viewport {
   width: 600px;
   height: 600px;
+  max-width: 100dvw;
+  max-height: 100dvw;
   position: relative;
   background: white;
   border: solid 2px black;
   border-radius: 8px;
   box-shadow: 0 6px #320e6d;
-  margin-bottom: 14px;
 }
 
 .viewport canvas {
